# RustSensei

./: .gitignore  DATA_SOURCES.md  EVALUATION.md  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml
app/: __init__.py  chat.py  cli.py  config.py  rag.py
configs/: dataset_config.yaml  lora_config.yaml  model_config.yaml  rag_config.yaml  train.yaml
data/: seed_examples.py
data/mlx_train/: train.jsonl  valid.jsonl
data_samples/: dataset_sample.jsonl
eval/: prompts_fr.jsonl  rubric.json
rag/docs/: README.md
reports/: baseline_10.json  baseline_examples.md  baseline_v1_eval.json  dataset_stats_v0.md  eval_20260109_134113.json  eval_20260109_135115.json  eval_baseline_20.json  eval_baseline_20260109_152403.json  eval_baseline_20260114_130139.json  eval_baseline_20260114_132638.json  eval_baseline_20260114_133215.json  eval_baseline_20260114_133712.json  eval_baseline_20260114_134929.json  eval_baseline_20260114_135307.json  eval_baseline_20260123_181105.json  eval_rag_20.json  eval_rag_20260109_144634.json  eval_rag_20260109_152403.json  eval_rag_20260123_190245.json  eval_rag_20260123_193202.json  eval_rag_20260124_160823.json  rag_eval.md  rag_v1_eval.json  rag_v1_no_rerank.json  rag_v1_report.md  training_metrics.md
scripts/: build_dataset.py  build_index.py  compile_check.py  download_docs.py  evaluate.py  export_gguf.py  generate_examples.py  train_lora.py  validate_dataset.py
tests/: __init__.py
